Fixed the arrow for Key applications and it's look on mobile screens

--- a/style/style.css
+++ b/style/style.css
@@ -299,9 +299,9 @@ background-color: rgba(29, 55, 121, 0.6)!important;
     width: 145px; */
 }
 .dot-svg-keyapp{
-    width:70%;
+    width:100%;
     position:relative;
-    top:270px;
+    top:265px;
     left:95px
 }
 .font-style{
@@ -541,15 +541,7 @@ padding-top:50px;
     transform: translate(-50%, -50%);
     
 }
-.text p{
-    font-size:14px;
-    margin-top:-50px;
-    margin-bottom:50px;
-}
-.text h1{
-    
-    font-size:40px!important;
-}
+
 
 .cubes:hover .overlay {
     opacity: 1;
@@ -639,11 +631,11 @@ rect{
     transform: translateX(-50%);
     left: 50%;
 }
-.appLayout{
+/* .appLayout{
   grid-template-columns: 1fr 1fr;
   margin: 0;
 
-}
+} */
 .mobile-menu-nav{
     background:#13204f;
     color:#ffffff;
@@ -732,10 +724,24 @@ rect{
     width: 145px; */
 }
 .text p{
-    font-size:14px;
-    /* margin-top:0%;
-    margin-bottom:5%; */
+    font-size:10px;
+    margin-bottom:5px; 
 }
+.text h1{
+    font-size: 20px!important;
+    margin-bottom:0px;
+}
+.cubes > h1{
+    font-size: 20px!important;
+    padding:100px 20px 30px 10px;
+}
+.dot-svg-keyapp{
+    width:100%;
+    position:relative;
+    top:265px;
+    left:95px
+}
+
 }
 
 /* Styles specifically for tablets */
@@ -843,6 +849,15 @@ rect{
 }
 .partner-container{
     padding-top:50px;
+}
+.text p{
+    font-size:14px;
+    margin-top:-10px;
+    margin-bottom:50px;
+}
+.text h1{
+    
+    font-size:40px!important;
 }
 
 }
